--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ loguru
 numpy
 plotly
 rich
-scikit-learn==0.23.2  # TODO - update after replaceing previous model checkpoints 
+scikit-learn
 tensorboard
 thu_rsvp_dataset
 torch
